Started working on styling

--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
     <h1>Pomodoro Clock</h1>
     <div id="inputs">
       <div id="break_input">
+        <h4>Break Length</h4>
         <button type="button" class="decrease_time" value="break">-</button>
-        Break Length: <input type="text" id="break_length">
+        <input type="text" id="break_length">
         <button type="button" class="increase_time" value="break">+</button><br>
       </div>
       <div id="session_input">
+        <h4>Work Length</h4>
         <button type="button" class="decrease_time" value="work">-</button>
-        Work Length: <input type="text" id="work_length">
+        <input type="text" id="work_length">
         <button type="button" class="increase_time" value="work">+</button>
       </div>
     </div>
